--- a/css/style.css
+++ b/css/style.css
@@ -1661,3 +1661,8 @@ p{
       .swiper-button-prev:after{
         color: white !important;
       }
+      /* Show dropdown on hover */
+.nav-item.dropdown:hover .dropdown-menu {
+  display: block;
+}
+
