--- a/css/style.css
+++ b/css/style.css
@@ -1039,6 +1039,15 @@ p{
   details ul li{
     flex-wrap: wrap !important;
   }
+  .main-image video {
+    height: 450px;
+  }
+  .nav-item.dropdown .dropdown-menu {
+    display: block !important;
+  }
+   .navbar .dropdown-toggle::after{
+    display: none !important;
+  }
   }
   .country__selected_bar{
     padding: 30px 0px;
@@ -1128,6 +1137,7 @@ p{
     padding: 50px 0px;
     border-bottom: 1px solid rgba(128, 128, 128, 0.507);
     margin-bottom: 50px;
+    flex-wrap: wrap;
   }
   .timeline-container {
     position: relative;
@@ -1195,7 +1205,8 @@ p{
     font-weight: bold;
     margin-bottom: 30px;
     position: relative;
-    /* display: inline-block; */
+    display: inline-block;
+    text-align: left;
   }
 
   .section-title::after {
@@ -1662,7 +1673,3 @@ p{
         color: white !important;
       }
       /* Show dropdown on hover */
-.nav-item.dropdown:hover .dropdown-menu {
-  display: block;
-}
-
