--- a/css/style.css
+++ b/css/style.css
@@ -998,7 +998,14 @@ p{
     object-fit: cover;
     border-radius: 5px;
   }
-
+  @media (max-width: 992px) {
+    .nav-item.dropdown .dropdown-menu {
+      display: block !important;
+    }
+     .navbar .dropdown-toggle::after{
+      display: none !important;
+    }
+  }
   @media (max-width: 768px) {
     .visa-section {
       grid-template-columns: 1fr;
@@ -1042,12 +1049,7 @@ p{
   .main-image video {
     height: 450px;
   }
-  .nav-item.dropdown .dropdown-menu {
-    display: block !important;
-  }
-   .navbar .dropdown-toggle::after{
-    display: none !important;
-  }
+
   }
   .country__selected_bar{
     padding: 30px 0px;
